<resources>
    <string name="app_name">Universeaty</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="default_google_id">"695219132217-liabk2d1cfd4bmmku5u368jp7q2nh3hp.apps.googleusercontent.com"</string>
    <string name="text">Text</string>
    <string name="phoneNumber">Phone</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="universeaty">Universeaty</string>
    <string name="notYetRegister">Don\'t have an account? Register</string>
    <string name="full_name">Full Name</string>
    <string name="haveAccount">Already have an account? Login</string>
</resources>