<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <TextView
        android:id="@+id/homeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:selectAllOnFocus="false"
        android:shadowColor="#54D39A"
        android:shadowRadius="5"
        android:textColor="#339A6C"
        android:text="@string/universeaty"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/fullNameTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="@string/full_name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/phoneNumberTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/phoneNumber"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/fullNameTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fullNameTv"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTv" />

    <EditText
        android:id="@+id/emailTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberTv"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberTv"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTv" />

    <EditText
        android:id="@+id/pwdTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_pwd"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/emailTv"
        app:layout_constraintStart_toStartOf="@+id/emailTv"
        app:layout_constraintTop_toBottomOf="@+id/emailTv" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTv"
        app:layout_constraintStart_toStartOf="@+id/homeTv"
        app:layout_constraintTop_toBottomOf="@+id/pwdTv" />

    <TextView
        android:id="@+id/loginIfRegisterdTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/haveAccount"
        android:textColor="#D1A10F"
        android:shadowColor="#DFB639"
        android:shadowRadius="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_button"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
