<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/homeTvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:selectAllOnFocus="false"
        android:shadowColor="#54D39A"
        android:shadowRadius="5"
        android:textColor="#339A6C"
        android:text="@string/universeaty"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pwdTv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/custom_pwd"
        android:drawablePadding="12dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="@+id/emailTv2"
        app:layout_constraintStart_toStartOf="@+id/emailTv2"
        app:layout_constraintTop_toBottomOf="@+id/emailTv2"
        android:autofillHints="@string/password" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <EditText
        android:id="@+id/emailTv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTvLogin"
        app:layout_constraintStart_toStartOf="@+id/homeTvLogin"
        app:layout_constraintTop_toBottomOf="@+id/pwdTv2" />

    <TextView
        android:id="@+id/notRegisterdTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/notYetRegister"
        android:textColor="#D1A10F"
        android:shadowColor="#DFB639"
        android:shadowRadius="2"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />
</androidx.constraintlayout.widget.ConstraintLayout>